Add job to workflow

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,6 @@ version: 2.1
 orbs:
   newman: postman/newman@0.0.2
 jobs:
-  newman-collection-run:
-    <<: *defaults
-    executor: newman/postman-newman-docker
-    steps:
-      - checkout
-      - newman/newman-run:
-          collection: ./Learning\ Object\ Service.postman_collection.json
-
   build:
     <<: *defaults
     steps:
@@ -43,7 +35,17 @@ jobs:
           paths: 
               - ./package.json
               - ./deploy.sh
-    
+
+  newman-collection-run:
+    <<: *defaults
+    executor: newman/postman-newman-docker
+    requires:
+      - build
+    steps:
+      - checkout
+      - newman/newman-run:
+          collection: ./Learning\ Object\ Service.postman_collection.json
+              
   create-sentry-release:
     <<: *defaults
     docker:
@@ -92,6 +94,10 @@ workflows:
   build-test:
     jobs:
       - build:
+          filters:
+            branches:
+              ignore: /master/
+      - newman-collection-run:
           filters:
             branches:
               ignore: /master/
