Up the newman version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ defaults: &defaults
     - image: cyber4all/circleci-aws:docker-git
 version: 2.1
 orbs:
-  newman: postman/newman@0.0.2
+  newman: postman/newman@latest
 jobs:
   build:
     <<: *defaults
