--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "snyk": "^1.189.0",
     "stopword": "^0.1.10",
     "striptags": "^3.1.1",
+    "superagent": "^5.3.1",
     "swagger-jsdoc": "^3.5.0",
     "swagger-ui-express": "^4.1.3",
     "uuid": "^3.3.3"
